# EarthSciAST

./: .gitignore  4phktritqojabpjilqcoeui2gip7qd5u.darc  AGENTS.md  CLAUDE.md  CONFORMANCE_SPEC.md  CONTRIBUTING.md  ESM_COMPLIANCE_VALIDATION_MATRIX.md  Project.toml  README.md  SECURITY.md  end_to_end_verification.py  esm-libraries-spec.md  esm-schema.json  esm-spec.md  install.sh  manifest  ruff.toml  uuiijbn9uabovd1u1qh1vqvrgudtvppj  workspace.json
audits/: bug_audit_2026-07-14.md  followup_2026-07-14.md  intern_preaudit_2026-07-19.md  julia_iip_cse_cadence_audit_2026-07-14.md  maintainability_audit_2026-05-01.md
docs/: README-DOCS.md  README.md  hugo.toml
examples/: initial_conditions_demo.py
lib/: calendar.esm  interp.esm  solar.esm
pkg/earthsci-ast-py/: BUILD.md  COUPLING_ITERATION.md  Makefile  README.md  pyproject.toml
pkg/earthsci-ast-py/docs/: dynamic_scope_resolution.md  mathematical_verification.md
pkg/earthsci-ast-py/scripts/: build.sh  publish.sh
pkg/earthsci-ast-py/src/earthsci_ast/: __init__.py  area_faq.py  cadence.py  canonicalize.py  codegen.py  coupling_imports.py  diagnostics.py  display.py  edit.py  error_handling.py  errors.py  esm_types.py  expr_walk.py  expression.py  flatten.py  geometry.py  index_ranges.py  json_walk.py  lower_expression_templates.py  migration.py  numpy_interpreter.py  op_registry.py  parse.py  pde_inline_tests.py  reactions.py  reference_resolution.py  registered_functions.py  relational.py  serialize.py  simulation.py  simulation_array.py  simulation_common.py  simulation_legacy.py  simulation_loaders.py  simulation_scalar.py  structural_checks.py  substitute.py  sympy_bridge.py  template_imports.py  units.py  (+2 more)
pkg/earthsci-ast-py/src/earthsci_ast/cli/: __init__.py  _adapter_main.py  cadence_adapter.py  determinism_adapter.py  migrate.py  pde_simulation_adapter.py
pkg/earthsci-ast-py/src/earthsci_ast/data/: esm-schema.json
pkg/earthsci-ast-py/src/earthsci_ast/data_loaders/: __init__.py  _source_urls.py  _xarray.py  cache.py  esio_provider.py  grid.py  mirror.py  points.py  provider.py  runtime.py  static_loader.py  time_resolution.py  url_template.py  variables.py
pkg/earthsci-ast-py/tests/: conftest.py  test_aggregate_conformance.py  test_aggregate_structural.py  test_arrayed_vars.py  test_arrayop_simulation.py  test_brownian.py  test_build_inspection.py  test_build_once_spatial_field_conformance.py  test_cadence_partition.py  test_cadence_structural.py  test_canonical_conformance.py  test_canonicalize.py  test_closed_functions.py  test_codegen.py  test_coupling_imports.py  test_data_loader_earthscidata_coverage.py  test_data_loaders_cache.py  test_data_loaders_runtime.py  test_dead_observed_skip.py  test_discrete_materialize_conformance.py  test_display.py  test_editing.py  test_esio_provider.py  test_esm_specification_coverage.py  test_expression.py  test_expression_templates.py  test_flatten.py  test_function_tables.py  test_function_tables_lowering.py  test_geometry_kernel.py  test_geometry_simulation.py  test_integration.py  test_inverse_trig_conformance.py  test_json_schema_validation.py  test_loaded_ic_bc_simulation.py  test_loader_injection.py  test_loader_provider.py  test_metaparam_expr_bindings.py  test_migrate_0_1_to_0_2.py  test_model_ref.py  (+45 more)
pkg/earthsci-ast-py/tests/fixtures/data_loaders/: ceds.esm  edgar_v81_monthly.esm  era5.esm  geosfp.esm  landfire.esm  ncep_ncar_reanalysis.esm  nei2016monthly.esm  openaq.esm  usgs3dep.esm  usgs3dep_slopes.esm  wrf.esm
pkg/earthsci-ast-rs/: Cargo.toml  README.md
pkg/earthsci-ast-rs/.cargo/: config.toml
pkg/earthsci-ast-rs/.github/workflows/: ci.yml
pkg/earthsci-ast-rs/benches/: benchmarks.rs
pkg/earthsci-ast-rs/examples/: canonical_expand.rs  nested_template_scaling.rs  pde_conformance.rs  roundtrip_expression.rs  segmented_refresh_solve.rs  unit_validation.rs
pkg/earthsci-ast-rs/js/: s2_interop.mjs
pkg/earthsci-ast-rs/src/: aggregate.rs  analysis.rs  area_faq.rs  broad_phase.rs  cadence.rs  canonicalize.rs  compile_error.rs  coupling.rs  coupling_imports.rs  dae.rs  diagnostic.rs  display.rs  edit.rs  error.rs  esm-schema.json  expression.rs  flatten.rs  graph.rs  join.rs  lib.rs  lower_enums.rs  lower_expression_templates.rs  migration.rs  op_registry.rs  parse.rs  pde_inline_tests.rs  performance.rs  provider.rs  reactions.rs  ref_loading.rs  reference_resolution.rs  registered_functions.rs  relational.rs  serialize.rs  simulate.rs  structural.rs  substitute.rs  template_imports.rs  types.rs  units.rs  (+3 more)
pkg/earthsci-ast-rs/src/simulate_array/: compile.rs  driver.rs  eval.rs  layout.rs  mod.rs  rhs.rs  vectorized.rs
pkg/earthsci-ast-rs/tests/: aggregate_conformance.rs  aggregate_simulate.rs  analysis_features.rs  arrayed_vars.rs  basic_functionality.rs  build_once_spatial_field_conformance.rs  cadence_conformance.rs  closed_functions_conformance.rs  coupled_array_seam.rs  coupling_imports.rs  dae_contract.rs  discrete_materialize_conformance.rs  earthscidata_loader_coverage.rs  expression_operations.rs  expression_templates_conformance.rs  flatten.rs  function_tables.rs  function_tables_lowering.rs  geometry_conformance.rs  geometry_simulate_conformance.rs  graph_structure.rs  index_sets_document_scope.rs  interpret.rs  inverse_trig_conformance.rs  loaded_ic_bc_simulation.rs  lower_enums_integration.rs  m2_join_filter.rs  metaparam_expr_bindings.rs  observed_cadence_tier.rs  operator_validation.rs  out_of_line_templates_conformance.rs  overlap_gate_conformance.rs  pde_vectorized_eval.rs  pde_zero_alloc.rs  performance.rs  ppm_template_chain.rs  pretty_print.rs  property_expression.proptest-regressions  property_expression.rs  refresh_conformance.rs  (+20 more)
pkg/earthsci-ast-rs/tests/common/: mod.rs
pkg/earthsci-ast-rs/tests/fixtures/discretization/: advection_1d_ppm_periodic.esm
pkg/earthsci-ast-rs/tests/fixtures/pushdown/: overlap_gate_point_in_rect.esm
scripts/: README.md  bench-out-of-line.jl  compare-conformance-outputs.py  conformance_corpus.py  conformance_lib.py  gen-fullrank-bench-fixture.py  gen_pde_sim_fixtures.py  generate_docs.py  (+20 more)
(+1069 files in other folders)
