[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthsci-ast"
version = "0.8.0"
description = "Earth System Model Serialization Format"
authors = [
    {name = "EarthSciML Authors and Contributors"}
]
readme = "README.md"
keywords = ["earth-science", "modeling", "serialization", "atmospheric-chemistry", "climate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Chemistry",
]
license = {file = "LICENSE"}
requires-python = ">=3.9"

# scipy / xarray / netcdf4 are required: the simulation and IO tiers (exercised
# by the test suite) hard-depend on them. matplotlib is genuinely optional — it
# is used lazily only by SimulationResult.plot behind an import guard — so it
# lives in the `plot` extra, not here.
dependencies = [
    "jsonschema>=4.0",
    "sympy>=1.9",
    "pint>=0.20",
    "numpy>=1.20",
    "scipy>=1.7",
    "xarray>=0.20",
    "netcdf4>=1.5",
]

[project.urls]
Homepage = "https://github.com/EarthSciML/EarthSciAST"
Repository = "https://github.com/EarthSciML/EarthSciAST.git"
Documentation = "https://github.com/EarthSciML/EarthSciAST#readme"
Issues = "https://github.com/EarthSciML/EarthSciAST/issues"

[project.scripts]
esm-migrate = "earthsci_ast.cli.migrate:main"
earthsci-determinism-adapter-python = "earthsci_ast.cli.determinism_adapter:main"
earthsci-cadence-adapter-python = "earthsci_ast.cli.cadence_adapter:main"
# The pde-simulation conformance harness probes PATH for
# ``earthsci-pde-sim-adapter-<binding>`` (scripts/run-pde-simulation-conformance.py);
# register the Python adapter under that exact name.
earthsci-pde-sim-adapter-python = "earthsci_ast.cli.pde_simulation_adapter:main"

[project.optional-dependencies]
# Plotting is optional: only SimulationResult.plot imports matplotlib, lazily and
# behind an import guard, so the core toolkit never requires it.
plot = [
    "matplotlib>=3.5",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "ruff>=0.4",
    "mypy>=0.990",
    "build>=0.8",
    "twine>=4.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    # Required for jsonschema FormatChecker to validate date-time and uri formats
    "rfc3339-validator",
    "rfc3986-validator",
    # Property-based / fuzz testing (gt-72z)
    "hypothesis>=6.0",
]
# Conservative-regridding geometry kernel (RFC semiring-faq-unified-ir §8.1 /
# Appendix B.2; bead ess-my4.4.4). The `intersect_polygon` leaf's spherical /
# geodesic manifolds clip on the sphere via `spherely` (vectorized S2 bindings
# over s2geography). `spherely` is PRE-1.0 — its Python API still moves between
# releases — so it is PINNED here and imported lazily by
# `earthsci_ast.geometry`; the stable surface beneath it is the
# s2geography / s2geometry C++ API. Track spherely releases and bump this pin
# deliberately. The `planar` manifold needs no backend (numpy-only
# Sutherland–Hodgman), so the rest of the toolkit never requires this extra.
geometry = [
    "spherely==0.1.0",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
earthsci_ast = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
# I (isort), UP (pyupgrade), B (bugbear), C4 (comprehensions), RET (return),
# W (pycodestyle warnings) on top of the E/F correctness defaults. The typing
# modernization (UP006/UP045) is safe because every module carries
# `from __future__ import annotations`.
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "C4", "RET", "W"]
ignore = [
    "E501",   # line length is left to the formatter, not enforced as an error
    "B008",   # function call in argument default (used deliberately in a few APIs)
]

[tool.ruff.lint.isort]
# Every module carries `from __future__ import annotations` so the whole package
# can use PEP 585/604 typing (list[int], X | None) while still importing on 3.9.
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
# Tests favor readability over lint purity; the package __init__ is a curated
# re-export surface where unused-import / ordering rules do not apply.
"tests/*" = ["B", "E7"]
# __init__ interleaves a conditional (scipy-optional) import block with the
# re-export list, so E402 (import-not-at-top) is expected here.
"src/earthsci_ast/__init__.py" = ["F401", "I001", "E402"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true