[package]
name = "earthsci-ast"
version = "0.9.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["EarthSciML Authors and Contributors"]
description = "Rust implementation of EarthSciML Serialization Format"
license = "MIT"
repository = "https://github.com/EarthSciML/EarthSciAST"
documentation = "https://docs.rs/earthsci-ast"
keywords = ["earth-science", "modeling", "serialization", "json"]
categories = ["science", "parsing", "simulation"]
readme = "README.md"

# Support both library and CLI binary
[[bin]]
name = "esm"
path = "src/bin/esm.rs"
# The CLI depends on clap; without this, a --no-default-features build would
# try (and fail) to compile the binary. With it, cargo simply skips the bin
# target when the `cli` feature is off — no per-item cfg gates needed.
required-features = ["cli"]

[lib]
name = "earthsci_ast"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# `preserve_order` keeps JSON object keys in source (insertion) order, so the
# load-time rewrite pass applies `expression_templates` `match` rules in
# template *declaration order* (esm-spec §9.6.3), matching the JS / Python
# bindings whose native maps preserve order.
#
# `float_roundtrip` makes float parsing correctly-rounded (nearest f64), so a
# 16-17-significant-digit JSON literal parses to the SAME bits Julia/Python
# `float(...)` (and Rust `str::parse::<f64>`) produce — the default serde_json
# fast path is 1 ulp off on some such literals (e.g. -104.52369275835723,
# 42.059133583516356), which broke AST byte identity on parse→emit round-trips.
serde_json = { version = "1.0", features = ["preserve_order", "float_roundtrip"] }
jsonschema = { version = "0.19", default-features = false }
thiserror = "2.0"
indexmap = { version = "2", features = ["serde"] }
ndarray = "0.16"
# diffsol (gt-5ws) — the ODE simulation backend, on BOTH native and wasm32: its
# Faer backend is pure Rust and cross-compiles (spike S1), so the in-browser
# `simulate` export (src/wasm.rs) can run pure-ODE / 0-D box models client-side.
# diffsol's default features `["nalgebra", "faer"]` are both kept: diffsol 0.11.0's
# lib.rs has unconditional `pub use` of the nalgebra modules even when that feature
# is off (so `default-features = false` fails to compile). The simulate module
# always selects FaerMat / FaerLU at the call site, so we still get the faer path;
# nalgebra is just along for the ride at compile time. The heavyweight optional
# features (LLVM / Cranelift / DiffSL / CUDA / SuiteSparse / Sundials) are excluded.
diffsol = "0.11"
clap = { version = "4.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
# Performance dependencies
rayon = { version = "1.8", optional = true }
simd-json = { version = "0.13", optional = true }
smallvec = { version = "1.11", features = ["serde"] }
# Fast, *fixed-seed* (hence deterministic — unlike std's randomized RandomState)
# hasher for the hot per-cell interpreter maps (`simulate_array`). Keys are
# trusted internal variable/index names, so the SipHash DoS resistance is unused
# overhead: the profile of a coupled level-set solve spent ~19% of samples in
# SipHash (`write_u8`/`write_str`/`make_hash`). rustc-hash has zero transitive
# deps. Only lookup-by-key maps are switched (no order-dependent iteration), so
# results are byte-identical.
rustc-hash = "2"
bumpalo = { version = "3.14", optional = true }
wide = { version = "0.7", optional = true }
bytemuck = { version = "1.14", optional = true }
criterion = { version = "0.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# s2bindings (ess-my4.4.11): the spherical geometry kernel behind the
# `intersect_polygon` leaf op (RFC semiring-faq-unified-ir §8.1, Appendix B.2).
# FFI over Google's s2geometry C++ engine — the same S2 core Python's `spherely`
# wraps, giving Rust↔Python tight cross-binding agreement (CONFORMANCE_SPEC.md
# §5.8). Pinned to a tag for reproducibility. Native-only: the crate compiles
# vendored abseil + s2geometry from source (CMake superbuild) and cannot build
# on wasm32. (diffsol, which used to be gated here alongside it, is now an
# unconditional `[dependencies]` entry since its Faer backend cross-compiles.)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
s2bindings = { git = "https://github.com/EarthSciML/s2bindings.rs", tag = "v0.1.0" }

# Native-only dev-dependencies. `criterion` pulls `wait-timeout` (whose `imp`
# module is unix/windows-only and fails to compile for wasm32), and
# `proptest` / `tempfile` are filesystem-bound. The wasm test target
# (`tests/wasm_suite.rs`) needs none of them, so gating them off wasm keeps
# `wasm-pack test` from dragging them into the wasm build.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.10"

# The wasm test harness — drives `tests/wasm_suite.rs` under node/headless-browser
# via `wasm-pack test`.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["benchmarks"]

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys", "web-sys"]
# Performance features
parallel = ["rayon"]
simd = ["wide", "bytemuck"]
zero_copy = ["simd-json"]
custom_alloc = ["bumpalo"]
benchmarks = ["criterion"]
performance = ["parallel", "simd", "zero_copy", "custom_alloc"]

# WASM target configuration
[package.metadata.wasm-pack.profile.release]
